--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "eat-da-burger",
+  "name": "burger",
   "version": "1.0.0",
-  "description": "Buger eating application with Node.js, Express, Handlebars, and MySQL.",
+  "description": "Eat-Da-Burger application",
   "main": "index.js",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-handler": "^0.2.0",
+    "mysql": "^2.16.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/angrbrd/eat-da-burger.git"
+    "url": "git+https://github.com/lynvierra/Burger.git"
   },
-  "keywords": [
-    "burgers",
-    "eating",
-    "burgerfi"
-  ],
-  "author": "Anna D Derbakova",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/angrbrd/eat-da-burger/issues"
+    "url": "https://github.com/lynvierra/Burger/issues"
   },
-  "homepage": "https://github.com/angrbrd/eat-da-burger#readme",
-  "dependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "express-handlebars": "^3.0.0",
-    "method-override": "^2.3.7",
-    "mysql": "^2.13.0"
-  }
+  "homepage": "https://github.com/lynvierra/Burger#readme"
 }
